<resources>
    <string name="app_name">Ejemplo14</string>
    <string name="text_team_a">Team A</string>
    <string name="action_3_points">+3 POINTS</string>
    <string name="action_2_points">+2 POINTS</string>
    <string name="action_free_throw">FREE THROW</string>
    <string name="text_team_b">Team B</string>
    <string name="action_reset">reset</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
